--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     document.querySelector(".ict-clock").innerHTML = ((hh < 10 ? "0" : "" ) + hh + "<span>" + cc + "</span>" + (mm < 10 ? "0" : "") + mm);
   }
   itClock();
-  setInterval(tClock, 500);
+  setInterval(itClock, 500);
 </script>
 <script type="Text/javascript"> // from w3schools.com
   function includeHTML() {
