--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>연습용 통합문서</title>
-  <link rel="icon" href="/GBGM/icon2h.png">
+  <link rel="icon" href="GBGM/icon2h.png">
   <meta charset="utf-8">
   <style>
   .ic-top{
@@ -104,17 +104,17 @@
   };
   document.querySelector('#it1').addEventListener("click", function(){
     let hf = document.querySelector('.ic-paragraph');
-    hf.innerHTML = '<div w3ih="/GBGM/gbgm.html"></div>';
+    hf.innerHTML = '<div w3ih="GBGM/gbgm.html"></div>';
     includeHTML();
   },false);
   document.querySelector('#it2').addEventListener("click", function(){
     let hf = document.querySelector('.ic-paragraph');
-    hf.innerHTML = '<div w3ih="/json_ex/json_ex.html"></div>';
+    hf.innerHTML = '<div w3ih="json_ex/json_ex.html"></div>';
     includeHTML();
   },false);
   document.querySelector('.ict-clock').addEventListener("click", function(){
     let hf = document.querySelector('.ic-paragraph');
-    hf.innerHTML = '<div w3ih="/GBGM/test.html"></div>';
+    hf.innerHTML = '<div w3ih="GBGM/test.html"></div>';
     includeHTML();
   },false);
 </script>
