--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
 
   document.querySelector('#it1').addEventListener("click", function(){
     let hf = document.querySelector('.ic-paragraph');
-    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="https://koseh530.github.io/fael/GBGM/gbgm.html"></iframe>';
+    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="GBGM/gbgm.html"></iframe>';
     //includeHTML();
   },false);
   document.querySelector('#it2').addEventListener("click", function(){
     let hf = document.querySelector('.ic-paragraph');
-    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="https://koseh530.github.io/fael/json_ex/json_ex.html"></iframe>';
+    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="json_ex/json_ex.html"></iframe>';
     //includeHTML();
   },false);
   document.querySelector('.ict-clock').addEventListener("click", function(){
     let hf = document.querySelector('.ic-paragraph');
-    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="https://koseh530.github.io/fael/GBGM/test.html"></iframe>';
+    hf.innerHTML = '<iframe class="ic-frame" frameborder="0" allowfullscreen="true" scrolling="auto" src="GBGM/test.html"></iframe>';
     //includeHTML();
   },false);
 </script>
