--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   }
   .ic-topbtn:hover{
     background-color: #428571;
+    cursor:pointer;
   }
   .ict-clock{
     float: right;
@@ -41,6 +42,7 @@
     color: white;
     padding: 10px;
     padding-left: 15px;
+    cursor:pointer;
   }
   .ic-all{
     margin-top: 50px;
