--- a/json_ex/json_ex.html
+++ b/json_ex/json_ex.html
@@ -51,7 +51,8 @@
 <body>
   <div class="c-all">
     <div>
-      <button id="boxtoday" class="c-button">오늘</button>
+      <button id="boxyest" class="c-button">어제</button>
+      <!-- 오늘 꺼가 나올 리 없지 -->
       <button id="box2001" class="c-button">2020년 1월</button>
       <button id="box2002" class="c-button">2020년 2월</button>
     </div>
@@ -60,8 +61,8 @@
   </div>
   <script type="text/javascript">
   
-  document.querySelector("#boxtoday").addEventListener("click", function(){
-    let jf = "http://koseh530.azki.org/movie10/?date=" + getToday();
+  document.querySelector("#boxyest").addEventListener("click", function(){
+    let jf = "http://koseh530.azki.org/movie10/?date=" + getYest();
     //console.log(jf);
     loadDoc(jf);
   }, false);
@@ -106,9 +107,9 @@
     document.querySelector(".c-paragraph").innerHTML = output + "</tbody></table>";
   }
     
-  function getToday(){
+  function getYest(){
     let vc = new Date();
-    //vc.setDate(vc.getDate()-1);
+    vc.setDate(vc.getDate()-1);
     let yy = vc.getFullYear();
     let mm = vc.getMonth();
     let dd = vc.getDate();
