--- a/json_ex/json_ex.html
+++ b/json_ex/json_ex.html
@@ -62,7 +62,7 @@
   <script type="text/javascript">
   
   document.querySelector("#boxyest").addEventListener("click", function(){
-    let jf = "https://koseh530.azki.org/movie10/?date=" + getYest();
+    let jf = "http://koseh530.azki.org/movie10/?date=" + getYest();
     //console.log(jf);
     loadDoc(jf);
   }, false);
