--- a/json_ex/json_ex.html
+++ b/json_ex/json_ex.html
@@ -98,7 +98,7 @@
         document.querySelector(".c-paragraph").innerText = "......";
       }
     };
-    xReq.open('GET', "jf");
+    xReq.open('GET', jf);
     xReq.send();
   }
 
