--- a/json_ex/json_ex.html
+++ b/json_ex/json_ex.html
@@ -14,6 +14,13 @@
     padding-top: 12px;
     overflow:scroll;
   }
+  .l-title{
+    padding: 8px;
+    margin-left: 2px;
+    margin-bottom: 12px;
+    font-size: 16px;
+    text-align: center;
+  }
   .l-button{
     background-color: black;
     color: white;
@@ -53,7 +60,9 @@
 </head>
 
 <body>
-  <div class="l-sidebar"></div>
+  <div class="l-sidebar">
+    <div class="l-title">일별 순위</div>
+  </div>
   <div class="c-all"><br>
     <div class="c-paragraph"></div>
   </div>
